--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="action_total_country_trend">국가전체 급상승 검색어</string>
   <string name="main_title_suffix">일일 급상승 검색어</string>
+  <string name="country_title">국가별 인기 급상승 검색어</string>
+  <string name="nav_app_share">앱 공유</string>
+  <string name="nav_reivew">리뷰 남기기</string>
 </resources>
