--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -13,5 +13,5 @@
   <string name="main_title_suffix">일일 급상승 검색어</string>
   <string name="country_title">국가별 인기 급상승 검색어</string>
   <string name="nav_app_share">앱 공유</string>
-  <string name="nav_reivew">리뷰 남기기</string>
+  <string name="nav_review">리뷰 남기기</string>
 </resources>
