--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -9,4 +9,5 @@
   <string name="country_title">국가별 인기 급상승 검색어</string>
   <string name="nav_app_share">앱 공유</string>
   <string name="nav_review">리뷰 남기기</string>
+  <string name="error_desc">일시적인 에러가 발생했습니다. 화면을 클릭하시면 앱을 재시작합니다.</string>
 </resources>
