--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,5 @@
   <string name="country_title">Trend by country</string>
   <string name="nav_app_share">App share</string>
   <string name="nav_review">Review write</string>
-
-  <string name="title_activity_error">ErrorActivity</string>
-  <string name="dummy_button">Dummy Button</string>
-  <string name="dummy_content">DUMMY\nCONTENT</string>
+  <string name="error_desc">A temporary error has occurred. Click on the screen to restart the app.</string>
 </resources>
