Added opensource license dialog

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,4 +11,5 @@
   <string name="nav_app_share">App share</string>
   <string name="nav_review">Review write</string>
   <string name="error_desc">Se ha producido un error temporal. Haga clic en la pantalla para reiniciar la aplicación.</string>
+  <string name="all_opensource_license">Licencia de código abierto</string>
 </resources>
