--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -11,4 +11,5 @@
   <string name="nav_app_share">مشاركة التطبيق</string>
   <string name="nav_review">مراجعة الكتابة</string>
   <string name="error_desc">لقد حدث خطأ مؤقت. انقر على الشاشة لإعادة تشغيل التطبيق.</string>
+  <string name="all_opensource_license">رخصة مفتوحة المصدر</string>
 </resources>
